After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707874 - Wrong GI annotation "(transfer full)" for pango_layout_set_attributes()
Wrong GI annotation "(transfer full)" for pango_layout_set_attributes()
Status: RESOLVED FIXED
Product: pango
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: pango-maint
pango-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-10 18:29 UTC by Uli Schlachter
Modified: 2013-09-10 21:35 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Uli Schlachter 2013-09-10 18:29:12 UTC
Hi,

the second argument to pango_layout_set_attributes() currently is documented as: @attrs: (allow-none) (transfer full): a #PangoAttrList, can be %NULL

However, the implementation calls pango_attr_list_ref() on this argument to get a new reference, so it really is "(transfer none)".

Source code for pango_layout_set_attributes(): https://git.gnome.org/browse/pango/tree/pango/pango-layout.c?id=e799af1f05513b756e8ed93a8eed82c24637f7b5#n599

I am not including a patch for this, because it should be quite trivial to handle.

Previous reports of this bug elsewhere:
- https://github.com/pavouk/lgi/issues/60
- https://awesome.naquadah.org/bugs/index.php?do=details&task_id=1176
- http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=721432

Thanks,
Uli