Correct an annotation

The annotation for pango_layout_set_attributes should be
'transfer none', not 'transfer full'. Pointed out in
https://bugzilla.gnome.org/show_bug.cgi?id=707874